--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,8 @@
     <div class="row">
       <div class="col-8 offset-2">
         <h1>{{msg}}</h1>
-        <h2>This is our Home Page!</h2>
+        <h5>{{msg2}}</h5>
+
         <form class="clearfix mb-4" action="POST">
           <div class="form-group">
             <label for="example-text">Example Text</label>
