adding ingredient form

--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,4 +1,4 @@
-<nav class="margin-bottom">
+<nav class="container">
     <div class="nav-wrapper teal lighten-2 heading">
       <a href="/" class="brand-logo some-left-margin">Lazy Cupboard </a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
