--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,9 @@
         <h1>{{msg}}</h1>
         <h5>{{msg2}}</h5>
 
-        <form class="clearfix mb-4" action="POST">
+        {{> ingredientform}}
+
+        {{!--  <form class="clearfix mb-4" action="POST">
           <div class="form-group">
             <label for="example-text">Example Text</label>
             <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
@@ -15,16 +17,16 @@
             <textarea class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Example Description"></textarea>
           </div>
           <button id="submit" class="btn btn-primary float-right">Submit</button>
-        </form>
-        <h3>Examples:</h3>
-        <ul id="example-list" class="list-group">
+        </form> --}}
+        <h5>Ingredients Available:</h5>
+        <ul id="ingredient-list" class="list-group">
           {{#each examples}}
           <li data-id="{{this.id}}" class="list-group-item">
             <a href="example/{{this.id}}">{{this.text}}</a>
             <button class="btn btn-danger float-right delete">ｘ</button>
           </li>
           {{/each}}
-        </ul>
+        </ul> 
       </div>
     </div>
   </div>
