Added a bar using D3JS to display calories

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="row">
       <div class="col-8 offset-2">
-        <h1>{{msg}}</h1>
-        <h5>{{msg2}}</h5>
+        
+        {{> progressbar}}
 
         {{> ingredientform}}
 
