--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -4,43 +4,43 @@
         <form class="col s12 margin-padding" id="register-user">
             <div class="row padding-10">
                 <div class="input-field col s6">
-                    <input id="first_name" type="text" class="validate" value = {{firstName}}>
+                    <input id="first_name" type="text" class="validate" value={{firstName}}>
                     <label for="first_name">First Name</label>
                 </div>
                 <div class="input-field col s6">
-                    <input id="last_name" type="text" class="validate" value = {{lastName}}>
+                    <input id="last_name" type="text" class="validate" value={{lastName}}>
                     <label for="last_name">Last Name</label>
                 </div>
                 <div class="input-field col s12">
-                    <input id="username" type="text" class="validate" value = {{username}}>
+                    <input id="username" type="text" class="validate" value={{username}}>
                     <label for="usdername">Username</label>
                 </div>
                 <div class="input-field col s12">
-                    <input id="email" type="email" class="validate" value = {{email}}>
+                    <input id="email" type="email" class="validate" value={{email}}>
                     <label for="email">Email</label>
                 </div>
                 <div class="input-field col s12">
-                    <input id="role" type="text" class="validate" value = {{role}}>
+                    <input id="role" type="text" class="validate" value={{role}}>
                     <label for="role">Role</label>
                 </div>
                 <div class="input-field col s12">
-                    <input id="password" type="password" class="validate" value = {{password}}>
+                    <input id="password" type="password" class="validate" value={{password}}>
                     <label for="password">Password</label>
                 </div>
                 <div class="input-field col s12">
-                    <input id="password2" type="password" class="validate" value = {{password2}}>
-                    <label for="password2">Verify Password</label>
+                    <input id="password2" type="password" class="validate" value={{password2}}>
+                    <label for="password2">Confirm Password</label>
                 </div>
                 <div class="input-field col s12">
                     <div class="centralized">
                         <button class="btn waves-effect waves-light" type="submit" name="action">Register
                             <i class="material-icons right">send</i>
-                        </button>   
-                    </div>     
+                        </button>
+                    </div>
                 </div>
             </div>
         </form>
     </div>
 </div>
 
- <script src="/js/users.js"></script>
+<script src="/js/users.js"></script>
