--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -19,10 +19,12 @@
           <button id="submit" class="btn btn-primary float-right">Submit</button>
         </form> --}}
         <h5>Ingredients Available:</h5>
+
         <ul id="ingredient-list" class="list-group">
-          {{#each examples}}
-          <li data-id="{{this.id}}" class="list-group-item">
-            <a href="example/{{this.id}}">{{this.text}}</a>
+          {{#each dbIngredient}}
+          
+          <li data-id="{{this.dataValues.id}}" class="list-group-item">
+            <a href="example/{{this.dataValues.id}}">{{this.dataValues.name}}</a>
             <button class="btn btn-danger float-right delete">ｘ</button>
           </li>
           {{/each}}
