--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,4 @@
 <div id="home">
-  <div class="container">
     <div class="row">
       <div class="col-8 offset-2">
         
@@ -8,6 +7,8 @@
         {{> ingredientform}}
 
         {{> ingredientList}}
+
+        {{> meals}}
 
         {{!--  <form class="clearfix mb-4" action="POST">
           <div class="form-group">
@@ -23,7 +24,6 @@
 
       </div>
     </div>
-  </div>
 </div>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
