--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,29 +1,24 @@
 <div id="home">
-    <div class="row">
-      <div class="col-8 offset-2">
-        
-        {{> progressbar}}
+  <div class="row">
+    <div class="col-8 offset-2">
+      
+      {{> progressbar}}
 
-        {{> ingredientform}}
+      {{> ingredientform}}
+
+      <div class="container-ingredient-list">
 
         {{> ingredientList}}
 
-        {{> meals}}
+      </div>
 
-        {{!--  <form class="clearfix mb-4" action="POST">
-          <div class="form-group">
-            <label for="example-text">Example Text</label>
-            <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
-          </div>
-          <div class="form-group">
-            <label for="example-description">Example Description</label>
-            <textarea class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Example Description"></textarea>
-          </div>
-          <button id="submit" class="btn btn-primary float-right">Submit</button>
-        </form> --}}
+      <div class="container-meal-list">
+
+        {{> meals}}
 
       </div>
     </div>
+  </div>
 </div>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
