--- a/views/partials/ingredientList.handlebars
+++ b/views/partials/ingredientList.handlebars
@@ -27,7 +27,7 @@
                     <td>{{this.protein}}</td>
                     <td>{{this.fat}}</td>
                     <td>{{this.carbs}}</td>
-                    <td><button id={{id}} class="btn-floating btn-small scale-transition">
+                    <td><button id={{id}} class="btn-floating btn-small scale-transition remove-ingredient">
                         <i class="material-icons">remove</i>
                         </button>
                     </td>
