--- a/views/partials/ingredientList.handlebars
+++ b/views/partials/ingredientList.handlebars
@@ -18,7 +18,8 @@
                 <tr dataID="{{this.dataValues.id}}">
                     <td>                  
                         <label>
-                            <input type="checkbox" {{checked}}/><span></span>
+                            <input type="checkbox" {{checked}}/>
+                            <span></span>
                         </label>
                     </td>
                     <td><a href="ingredient/{{this.dataValues.id}}">{{this.name}}</a></td>
