sending selected ingredients to get recipe

--- a/views/partials/meals.handlebars
+++ b/views/partials/meals.handlebars
@@ -1,23 +1,29 @@
+{{#if meals}}
+<table class="highlight responsive-table" id="meal-list">
 
+    <thead>
+        <tr>
+            <th>
+                <h5>Meals List</h5>
+            </th>
+            <th>Remove</th>
+        </tr>
+    </thead>
 
-    <table class="highlight responsive-table" id="meal-list">
-
-        <thead>
-            <tr>
-                <th><h5>Meals List</h5></th>
-                <th>Remove</th>
-            </tr>
-        </thead>
-
-        <tbody>
-            {{#each dbMeals}}        
-                <tr data-id="{{this.dataValues.id}}">
-                    <td><a href="meals/{{this.dataValues.id}}">{{this.name}}</a></td>
-                    <td><button id={{id}} class="btn-floating btn-small scale-transition">
-                        <i class="material-icons">remove</i>
-                        </button>
-                    </td>
-                </tr>
-            {{/each}}                
-        </tbody>
-    </table>
+    <tbody>
+        {{#each dbMeals}}
+        <tr data-id="{{this.dataValues.id}}">
+            <td><a href="meals/{{this.dataValues.id}}">{{this.name}}</a></td>
+            <td><button id={{id}} class="btn-floating btn-small scale-transition">
+                    <i class="material-icons">remove</i>
+                </button>
+            </td>
+        </tr>
+        {{/each}}
+    </tbody>
+</table>
+{{else}}
+<button class="btn waves-effect waves-light" id="find-recipes" type="submit" name="action">Find Recipes
+    <i class="material-icons right">send</i>
+</button>
+{{/if}}
