--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <div id="home">
   <div class="row">
     <div class="col-8 offset-2">
-      
+
       {{> progressbar}}
 
       {{> ingredientform}}
@@ -14,7 +14,7 @@
 
       <div class="container-meal-list">
 
-        {{> meals}}
+        {{> recipes}}
 
       </div>
     </div>
