some progress with recipes

--- a/views/partials/recipes.handlebars
+++ b/views/partials/recipes.handlebars
@@ -23,7 +23,9 @@
     </tbody>
 </table>
 {{else}}
-<button class="btn waves-effect waves-light recipe-list" id="find-recipes" type="submit" name="action">Find Recipes
-    <i class="material-icons right">send</i>
-</button>
+<div class="recipe-list">
+    <button class="btn waves-effect waves-light" id="find-recipes" type="submit" name="action">Find Recipes
+        <i class="material-icons right">send</i>
+    </button>
+</div>
 {{/if}}
