improved overall front end

--- a/views/partials/ingredientList.handlebars
+++ b/views/partials/ingredientList.handlebars
@@ -1,9 +1,9 @@
 <div class="row">
     <table class="highlight responsive-table" id="ingredient-list">
 
-        <thead>
+        <thead id="thead-ingredientList">
             <tr>
-                <th></th>
+                <th class="collapse-table"><i class="material-icons">zoom_out_map</i></th>
                 <th>Ingredient</th>
                 <th>Calories</th>
                 <th>Protein</th>
