--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,39 +1,45 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    
-    <meta charset="utf-8">
-    
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    
-    <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    
-    {{!-- Adding JQUERY --}}
-    <script src="https://code.jquery.com/jquery.js"></script>
+<head>
+
+  <meta charset="utf-8">
+
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+  <!--Import Google Icon Font-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  {{!-- Adding JQUERY --}}
+  <script src="https://code.jquery.com/jquery.js"></script>
 
 
-    <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
-    
-    <title>Lazy Cupboard</title>
+  <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
 
-  </head>
+  <title>Lazy Cupboard</title>
 
-  <body class="#eceff1 blue-grey lighten-5">
-    <div class="content-container">
+</head>
 
-
-      {{> navbar}}
-
-      {{{body}}}
-
-    </div>
+<body class="#eceff1 blue-grey lighten-5">
+  <div class="content-container">
 
 
-        <!-- Compiled and minified JavaScript -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  </body>
+    {{> navbar}}
+
+    {{{body}}}
+
+  </div>
+
+
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script>
+    $(document).ready(function () {
+      $('.sidenav').sidenav();
+    });
+
+  </script>
+</body>
 
 </html>
