--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,15 +1,26 @@
 <nav>
-    <div class="nav-wrapper teal lighten-2 heading">
-      <a href="/" class="brand-logo some-left-margin">Lazy Cupboard </a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
+  <div class="nav-wrapper teal lighten-2 heading">
+    <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+    <a href="/" class="brand-logo some-left-margin">Lazy Cupboard </a>
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
 
-        {{#if user}}
-         <li><a href="/">Welcome {{user.firstName}}</a></li>
-         <li><a href="/users/logout">Logout</a></li>
-        {{else}}
-          <li><a href="/users/login">Login</a></li>
-          <li><a href="/users/register">Register</a></li>
-         {{/if}}
-      </ul>
-    </div>
+      {{#if user}}
+      <li><a href="/">Welcome {{user.firstName}}</a></li>
+      <li><a href="/users/logout">Logout</a></li>
+      {{else}}
+      <li><a href="/users/login">Login</a></li>
+      <li><a href="/users/register">Register</a></li>
+      {{/if}}
+    </ul>
+  </div>
 </nav>
+
+<ul class="sidenav" id="mobile-demo">
+  {{#if user}}
+  <li><a href="/">Welcome {{user.firstName}}</a></li>
+  <li><a href="/users/logout">Logout</a></li>
+  {{else}}
+  <li><a href="/users/login">Login</a></li>
+  <li><a href="/users/register">Register</a></li>
+  {{/if}}
+</ul>
