fixed table expand/collapse button

--- a/views/partials/ingredientList.handlebars
+++ b/views/partials/ingredientList.handlebars
@@ -3,7 +3,7 @@
 
         <thead id="thead-ingredientList">
             <tr>
-                <th class="collapse-table"><i class="material-icons">zoom_out_map</i></th>
+                <th class="collapse-table"><i class="material-icons" id="collapse-ing-table">unfold_less</i></th>
                 <th>Ingredient</th>
                 <th>Calories</th>
                 <th>Protein</th>
