--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,33 +1,34 @@
 <div class="login-container center-align ">
 
-<div class="card-panel hoverable center-align">
-    <div class="card-content">
-              <span class="card-title">Account Login</span>
-            </div>
-    <div class="row">
-        <form method="post" action="/users/login"  class="col s12" id="login-form">
-            <div class="row">
-                <div class="input-field col s12">
-                    <input id="login-username" type="text" class="validate" name="email">
-                    <label for="email">Username</label>
+    <div class="card-panel hoverable center-align">
+        <div class="card-content">
+            <span class="card-title">Account Login</span>
+        </div>
+        <div class="row">
+            <form method="post" action="/users/login" class="col s12" id="login-form">
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input placeholder="Please enter your email or username to login" id="login-username" type="text"
+                            class="validate" name="email">
+                        <label for="email">Username or Email</label>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <input id="login-password" type="password" class="validate" name="password">
-                    <label for="password">Password</label>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input placeholder="Please enter your password" id="login-password" type="password" class="validate"
+                            name="password">
+                        <label for="password">Password</label>
+                    </div>
                 </div>
-            </div>
-        
-            <div class="row">
-                <div class="input-field col s12">
+
+                <div class="row">
+                    <div class="input-field col s12">
                         <button class="btn waves-effect waves-light" type="submit" name="action">Login
-                        <i class="material-icons right">send</i>
-                    </button>        
+                            <i class="material-icons right">send</i>
+                        </button>
+                    </div>
                 </div>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
 </div>
-</div>
-
