--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,6 +17,7 @@
 
   <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
 
+
   <title>Lazy Cupboard</title>
 
 </head>
@@ -29,12 +30,15 @@
 
     {{{body}}}
 
+
   </div>
 
 
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="/js/index.js"></script>
   <script>
+
     $(document).ready(function () {
       $('.sidenav').sidenav();
     });
