--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,11 +1,16 @@
+<ul id="dropdown1" class="dropdown-content">
+  <li><a href="/users/logout">Logout</a></li>
+</ul>
+
 <nav>
   <div class="nav-wrapper teal lighten-2 heading">
     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <a href="/" class="brand-logo some-left-margin">Lazy Cupboard </a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       {{#if user}}
-      <li><a href="/">Welcome {{user.firstName}}</a></li>
-      <li><a href="/users/logout">Logout</a></li>
+      <li><a href="/myrecipes">My Recipes</a></li>
+
+      <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Welcome {{user.firstName}}<i class="material-icons right">arrow_drop_down</i></a></li>
       {{else}}
       <li><a href="/users/login">Login</a></li>
       <li><a href="/users/register">Register</a></li>
@@ -14,12 +19,11 @@
   </div>
 </nav>
 
-<ul class="sidenav" id="mobile-demo">
+{{!-- <ul class="sidenav" id="mobile-demo">
   {{#if user}}
-  <li><a href="/">Welcome {{user.firstName}}</a></li>
-  <li><a href="/users/logout">Logout</a></li>
+  <li><a class="dropdown-trigger" href="/" data-target="dropdown1">Welcome {{user.firstName}}<i class="material-icons right">arrow_drop_down</i></a></li>
   {{else}}
   <li><a href="/users/login">Login</a></li>
   <li><a href="/users/register">Register</a></li>
   {{/if}}
-</ul>
+</ul> --}}
