--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -48,10 +48,18 @@
 }
 .div-image-size {
   max-height: auto;
-  max-width: 45%;
+	max-width: 45%;
+}
+
+.delete-button-recipe{
+	margin: auto
+
 }
 .image-size {
   display: block;
   width: 100%;
   height: auto;
+}
+.recipecard-css{
+	height: 400px;
 }
