--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -5,7 +5,7 @@
 <nav>
   <div class="nav-wrapper teal lighten-2 heading">
     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-    <a href="/" class="brand-logo some-left-margin">Lazy Cupboard </a>
+    <a href="/LazyCupboard" class="brand-logo some-left-margin">Lazy Cupboard </a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       {{#if user}}
       <li><a href="/myrecipes">My Recipes</a></li>
