--- a/views/recipe.handlebars
+++ b/views/recipe.handlebars
@@ -6,8 +6,8 @@
         <li class="collection-header">
             <h4>Ingredients:</h4>
         </li>
-        {{#each ingredients}}
-        <li class="collection-item">{{ingredient}}</li>
+        {{#each RecipeIngredients}}
+        <li class="collection-item">{{text}}</li>
         {{/each}}
     </ul>
     <p><a href="{{url}}" target="_blank">Click me </a>to go to see the steps</p>
