--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,3 +1,5 @@
+{{> navbar}}
+
 <div class="login-container center-align ">
 
     <div class="card-panel hoverable center-align">
@@ -8,15 +10,15 @@
             <form method="post" action="/users/login" class="col s12" id="login-form">
                 <div class="row">
                     <div class="input-field col s12">
-                        <input placeholder="Please enter your email or username to login" id="login-username" type="text"
-                            class="validate" name="email">
+                        <input placeholder="Please enter your email or username to login" id="login-username"
+                            type="text" class="validate" name="email">
                         <label for="email">Username or Email</label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
-                        <input placeholder="Please enter your password" id="login-password" type="password" class="validate"
-                            name="password">
+                        <input placeholder="Please enter your password" id="login-password" type="password"
+                            class="validate" name="password">
                         <label for="password">Password</label>
                     </div>
                 </div>
