--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,50 +1,64 @@
 {{> navbar}}
 
-<div class="register-container">
-    <div class="card-panel hoverable center-align">
+<div class="container">
 
-        <form class="col s12 margin-padding" id="register-user">
-            <div class="row padding-10">
-                <div class="input-filed col s12 hidden red-text">
+    <div class="row">
+        <div class="col s12 m4 l2"></div>
+        <div class="col s12 m4 l8 center-align">
 
+            <div class="card-panel hoverable center-align">
+                <div class="card-content">
+                    <h5>
+                        <span class="card-title">Register</span>
+                    </h5>
                 </div>
-                <div class="input-field col s6">
-                    <input id="first_name" type="text" class="validate" value={{firstName}}>
-                    <label for="first_name">First Name</label>
-                </div>
-                <div class="input-field col s6">
-                    <input id="last_name" type="text" class="validate" value={{lastName}}>
-                    <label for="last_name">Last Name</label>
-                </div>
-                <div class="input-field col s12">
-                    <input id="username" type="text" class="validate" value={{username}}>
-                    <label for="usdername">Username</label>
-                </div>
-                <div class="input-field col s12">
-                    <input id="email" type="email" class="validate" value={{email}}>
-                    <label for="email">Email</label>
-                </div>
-                <div class="input-field col s12">
-                    <input id="role" type="text" class="validate" value={{role}}>
-                    <label for="role">Role</label>
-                </div>
-                <div class="input-field col s12">
-                    <input id="password" type="password" class="validate" value={{password}}>
-                    <label for="password">Password</label>
-                </div>
-                <div class="input-field col s12">
-                    <input id="password2" type="password" class="validate" value={{password2}}>
-                    <label for="password2">Verify Password</label>
-                </div>
-                <div class="input-field col s12">
-                    <div class="centralized">
-                        <button class="btn waves-effect waves-light" type="submit" name="action">Register
-                            <i class="material-icons right">send</i>
-                        </button>
-                    </div>
+                <div class="row">
+                    <form class="col s12 margin-padding" id="register-user">
+                        <div class="row padding-10">
+                            <div class="input-filed col s12 hidden red-text">
+
+                            </div>
+                            <div class="input-field col s6">
+                                <input id="first_name" type="text" class="validate" value={{firstName}}>
+                                <label for="first_name">First Name</label>
+                            </div>
+                            <div class="input-field col s6">
+                                <input id="last_name" type="text" class="validate" value={{lastName}}>
+                                <label for="last_name">Last Name</label>
+                            </div>
+                            <div class="input-field col s12">
+                                <input id="username" type="text" class="validate" value={{username}}>
+                                <label for="usdername">Username</label>
+                            </div>
+                            <div class="input-field col s12">
+                                <input id="email" type="email" class="validate" value={{email}}>
+                                <label for="email">Email</label>
+                            </div>
+                            <div class="input-field col s12">
+                                <input id="role" type="text" class="validate" value={{role}}>
+                                <label for="role">Role</label>
+                            </div>
+                            <div class="input-field col s12">
+                                <input id="password" type="password" class="validate" value={{password}}>
+                                <label for="password">Password</label>
+                            </div>
+                            <div class="input-field col s12">
+                                <input id="password2" type="password" class="validate" value={{password2}}>
+                                <label for="password2">Verify Password</label>
+                            </div>
+                            <div class="input-field col s12">
+                                <div class="centralized">
+                                    <button class="btn waves-effect waves-light" type="submit" name="action">Register
+                                        <i class="material-icons right">send</i>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
-        </form>
+        </div>
+        <div class="col s12 m4 l2"></div>
     </div>
 </div>
 
